(images) Fix margin of Like button on mobile

--- a/astrobin/static/astrobin/scss/astrobin-mobile.scss
+++ b/astrobin/static/astrobin/scss/astrobin-mobile.scss
@@ -382,11 +382,11 @@
     justify-content: center;
   }
 
-  .iotd-queue-item, .top-picks-item{
+  .iotd-queue-item, .top-picks-item {
     margin-right: 0 !important;
   }
 
-  .iotd-queue-item img, .top-picks-item img{
+  .iotd-queue-item img, .top-picks-item img {
     width: 100% !important;
   }
 
@@ -399,8 +399,12 @@
       padding: 0 $spacer-large;
     }
   }
-}
 
+  .toggleproperty-add-remove.property-like {
+    margin-left: $spacer-medium;
+    width: calc(70% - 22px);
+  }
+}
 
 @media screen and (max-width: 375px) {
   .modal {
