--- a/astrobin/static/astrobin/scss/forum.scss
+++ b/astrobin/static/astrobin/scss/forum.scss
@@ -216,6 +216,7 @@ th.forum-name {
 
   .toggleproperty-add-remove {
     width: auto !important;
+    margin-left: 0 !important;
 
     .btn {
       width: auto;
